# uvnote

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  publish.yml
test-repo/: linux_report.md  macos_report.md  report.md
test_notes/math/: algebra.md
test_notes/programming/: python_basics.md
test_notes/science/: physics.md
uvnote/: __init__.py  cli.py  executor.py  file_deps.py  generator.py  logging_config.py  parser.py
uvnote/templates/: base.html.j2  boot.js.j2  head.html.j2  scripts.js.j2  styles.css.j2
