[project]
name = "uvnote"
version = "0.1.0"
description = "Stateless, deterministic notebooks with uv and Markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "markdown>=3.5.0",
    "pygments>=2.16.0",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
uvnote = "uvnote.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

